public files and src files

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="src/assets/css/style.css">
+    <link rel="stylesheet" href="./src/assets/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,7 +34,9 @@
     <section id="Work">
         <h3 class="title">Work</h3>
         <img class="image2" src="assets/images/IMG-2628.JPG" alt="Painted Apartment">
-        <img class="image3" src="assets/images/IMG-1906.jpg" alt="Installing roof shingles">
+        <img class="image3" src="assets/images/IMG-1906.jpg" alt="Installing roof 
+        shingles">
+        <img class="image4" src="assets/images/Screen Shot 2023-02-26 at 9.33.24 PM.png" alt="TRAVEL">
     </section>
    <!--- <section id="Contact">
         <div>
